--- a/assets/omega/models/item/food/apple_core.json
+++ b/assets/omega/models/item/food/apple_core.json
@@ -1,6 +1,6 @@
 {
-  "parent": "item/generated",
+  "parent": "minecraft:item/generated",
   "textures": {
-    "layer0": "food/apple_core"
+    "layer0": "omega:item/food/apple_core"
   }
 }
